Fixed spacing on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -10,15 +10,13 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
+
+  background-color: #e2e2e2;
+  font-family: sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
-}
-
-html {
-  background-color: #e2e2e2;
-  font-family: sans-serif;
 }
 
 body {
@@ -26,11 +24,12 @@ body {
 }
 
 .body {
-  padding: 1em;
+  padding: 0 1em 2em;
 }
 
 p {
   vertical-align: middle;
+  padding: 1em 0;
 }
 
 section {
@@ -42,12 +41,16 @@ section {
   width: 100%;
 }
 
+.img-flex {
+  width: 100%;
+}
+
 a {
   background-color: #555;
-  color: #fff;
-  text-decoration: none;
-  padding: 0.5em 0.75em;
   border-radius: 4px;
+  color: #fff;
+  padding: 0.5em 0.75em;
+  text-decoration: none;
 }
 
 a:hover {
@@ -66,7 +69,7 @@ a:hover {
 @media only screen and (min-width: 38em) {
 
   html {
-    font-size: 120%;
+    font-size: 110%;
     line-height: 1.4;
   }
 
